styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@layer base {
  body {
    font-family: 'Poppins', system-ui, sans-serif;
  }
}

html{
  scroll-behavior: smooth;
  background-color: #5F73A3;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

/**************** WELCOME ****************/
.welcome{
  margin-top: 9%;
}

.underline{
  width: 80%;
  font-weight: 700px;
}

/**************** ABOUT ****************/
.about{
  margin: auto;
  margin-top: 16%;
  padding-bottom: 3%;
  width: 60%;
}

.about-title{
  height: 14%;
}

.frameworks{
  margin-left: 60%;
}

/**************** PROJECTS ****************/

.projects{
  margin-top: 5%;
  justify-items: center;
  margin-bottom: 16%;
}

.project-box{
  width: 80%;
  margin: 10%;
}

.devpost{
  font-size: 3.7rem;
}

/**************** CONTACT ****************/
.contacts{
  margin: auto;
  width: 55%;
}

.contact-icons{
  align-items: center;
}

.buttonHolder{
  text-align: center;
  background-color: #A7A8DE;
  width: 8%;
  margin: auto;
  border-radius: 25%;
}

input[type=submit]{
  text-align: center;
  border: none;
  padding: 20px 32px;
  text-decoration: none;
  margin: 4px 2px;
}

